backstage-resources/bs-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: backstage
  name: backstage
  namespace: backstage
spec:
  #ingressClassName: traefik
  rules:
    - host: "backstage.74.220.20.178.nip.io"
      http:
        paths:
          - backend:
              service:
                name: backstage
                port:
                  number: 80
            path: /
            pathType: Prefix
